<resources>
    <string name="app_name">Fais</string>
    <string name="nav_header_title">Fais</string>
    <string name="nav_header_subtitle">www.fais.co.mz</string>
    <string name="action_settings">Definições</string>

    <string name="menu_home">Home</string>
    <string name="menu_categories">Categorias</string>
    <string name="menu_local">Local</string>
    <string name="menu_account">Conta</string>
    <string name="menu_share">Partilhar</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="site">Ir para web</string>

    <string name="menu_conta">Conta</string>
    <string name="menu_login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_pass">Não tem conta?</string>
    <string name="create_account">Criar</string>
    <string name="Entrar">Entrar</string>

    <string name="menu_create_account">Criar Conta</string>
    <string name="nome">Nome</string>
    <string name="repetir_password">Repetir a Password</string>
    <string name="tipo_conta">Tipo de conta</string>
    <string name="comprador">Comprador</string>
    <string name="promotor">Promotor</string>

    <string name="menu_event">Evento</string>
    <string name="event_details">Detalhes do Evento</string>

    <string name="categoria">Categoria: Show</string>
    <string name="imposto_msg">(Imposto adiconal pode ser aplicado no checkout)</string>
    <string name="quant_normal">Quant...Normal</string>
    <string name="quant_vip">Quant...Vip</string>
    <string name="btn_comprar">Comprar</string>
    <string name="btn_reservar">Reservar</string>
    <string name="duvida">Tem alguma dúvida sobre o evento? Sinta-se à vontade para entrar em contato com o promotor via e-mail ou chamada</string>
    <string name="contacto">Contacto: 843671529</string>
    <string name="email_promotor">Email: samuellangajr@gmail.com</string>
    <string name="outros_eventos">Outros Eventos</string>

    <string name="menu_checkout">Checkout</string>
    <string name="numero_celular">Numero de celular</string>
    <string-array name="metodo_pagamento">
        <item>MPESA</item>
        <item>Emola</item>
    </string-array>
    <string name="btn_seguinte">Seguinte</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="menu_payment_confirmation">Confirmar Pagamento</string>
    <string name="btn_confirmar">Confirmo</string>

    <string name="create_event">Criar Evento</string>>
    <string-array name="categorias">
        <item>Show</item>
        <item>Teatro</item>
        <item>Conferência</item>
        <item>Seminario</item>
        <item>Workshop</item>
        <item>Outro</item>
    </string-array>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>