<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="mz.ac.isutc.lecc31.fais.Samuel.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_login"
        android:name="mz.ac.isutc.lecc31.fais.Samuel.ui.login.LoginFragment"
        android:label="@string/menu_conta"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/nav_create_account"
        android:name="mz.ac.isutc.lecc31.fais.Samuel.ui.create_account.Create_accountFragment"
        android:label="@string/menu_conta"
        tools:layout="@layout/fragment_create_account" />
    <fragment
        android:id="@+id/nav_event_details"
        android:name="mz.ac.isutc.lecc31.fais.Samuel.ui.event_details.Event_detailsFragment"
        android:label="@string/menu_event"
        tools:layout="@layout/fragment_event_details" />
    <fragment
        android:id="@+id/nav_checkout"
        android:name="mz.ac.isutc.lecc31.fais.Samuel.ui.checkout.CheckoutFragment"
        android:label="@string/menu_checkout"
        tools:layout="@layout/fragment_checkout" />
    <fragment
        android:id="@+id/nav_payment_confirmation"
        android:name="mz.ac.isutc.lecc31.fais.Samuel.ui.payment_confirmation.Payment_confirmationFragment"
        android:label="@string/menu_payment_confirmation"
        tools:layout="@layout/fragment_payment_confirmation" />
</navigation>